# react-frontend-python-backend-app

./: .gitignore  README.md
backend/services/product-service/: Dockerfile  requirements.txt
backend/services/user-service/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
backend/services/user-service/alembic/: env.py
backend/services/user-service/alembic/versions/: c263da00e517_initial_migration.py
backend/services/user-service/app/: __init__.py  main.py
backend/services/user-service/app/api/: deps.py
backend/services/user-service/app/api/v1/: api.py
backend/services/user-service/app/api/v1/endpoints/: auth.py  users.py
backend/services/user-service/app/core/: config.py  dev_config.py  feature_flags.py  logging.py  metrics.py  security.py  version.py
backend/services/user-service/app/crud/: __init__.py  crud_user.py  user.py
backend/services/user-service/app/db/: base.py  session.py
backend/services/user-service/app/models/: __init__.py  user.py
backend/services/user-service/app/schemas/: __init__.py  user.py
backend/services/user-service/k8s/: db-deployment.yaml  db-service.yaml  deployment.yaml  pvc.yaml  secrets.yaml  service.yaml
backend/services/user-service/tests/: conftest.py  test_api.py
frontend/ecommerce-app/: jest.config.cjs  package-lock.json  package.json  server.js
frontend/public/: index.html  site.webmanifest
frontend/src/: App.tsx
k8s/backend/: deployment.yaml  product-service-deployment.yaml  product-service-service.yaml  service.yaml
k8s/deployments/: user-service-deployment.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/istio/: gateway.yaml  traffic-management.yaml
k8s/monitoring/: grafana-deployment.yaml  prometheus-deployment.yaml
src/: App.tsx
src/components/: Navbar.tsx  ProductCard.tsx
src/pages/: Home.tsx  Login.tsx  Products.tsx  Register.tsx
src/services/: api.ts  auth.ts  product.ts
terraform/: gcs.tf  gke.tf  main.tf  terraform.tfvars.example  variables.tf
(+31 files in other folders)
